[package]
name = "repo-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
ftp = "3.0.1"
path-slash = "0.2.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shellexpand = "3.1.0"
ssh2 = "0.9.4"
walkdir = "2.5.0"
zip = "0.6.6"
